# tech-redar

./: Taskfile.yml  docker-compose.yml
.kiro/specs/tech-radar/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
backend/: Dockerfile  README.md  pyproject.toml
backend/tech_radar/: config.py  database.py  main.py  models.py  settings.py
backend/tech_radar/routes/: ping.py  safe_endpoint.py  technologies.py
backend/tests/: conftest.py  test_models.py  test_setup.py
backend/tests/routes/technologies/: test_delete_technology.py  test_get_technology.py  test_update_technology.py  test_workflow.py
frontend/: .prettierrc.json  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  technologiesSample.ts
frontend/src/components/: CustomToaster.tsx  EditTechnologyModalForm.tsx  ErrorBox.tsx  HistoryTable.tsx  NewTechnologyModalForm.tsx  TechnologiesTable.tsx  TechnologyTag.tsx  historyTable.tsx  technologiesTable.tsx
frontend/src/components/TechnologiesTable/: TechnologiesTable.css  TechnologiesTable.tsx
frontend/src/hooks/: useErrorToast.tsx  useLoadingToast.ts  useTechnologies.ts  useToastedMutation.ts
frontend/src/libraries/: api.ts  colors.ts  confirmation.ts  serealizing.ts  typesUtilities.ts
frontend/src/libraries/api/: api.ts  errors.ts  technologies.ts
frontend/src/libraries/api/technologies/: client.ts  index.ts  schemas.ts
frontend/src/libraries/api/technologies/__tests__/: client.test.ts  schemas.test.ts
